src/components/SideMenu.css
.backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   min-height: 100vh;
   z-index: 10;
   background-color: rgba(0, 0, 0, 0.75);
}

.side-menu {
   position: fixed;
   right: 0;
   min-height: 100vh;
   width: 45vw;
   z-index: 100;
   transform: translateX(100%);
   background-color: white;
   transition: all 200ms linear;
}

.side-menu.opened {
   transform: translateX(0);
}

.close-menu-icon {
   position: fixed;
   top: 25px;
   right: 30px;
}

.close-menu-icon:hover {
   cursor: pointer;
}

@media (min-width: 893px) {

   .backdrop {
      display: none;
   }

   .side-menu {
      display: none;
   }
}

